Technical update to JFX23 and dependencies