@@ -7,7 +7,7 @@
 
     <groupId>org.photoslide</groupId>
     <artifactId>PhotoSlide</artifactId>
-    <version>1.5.0-RELEASE</version>   
+    <version>1.5.1-RELEASE</version>   
 
     <!-- This description text is included in the Windows installer by default, see win-jpackage.txt -->
     <description>Photoslide is an app for managing and editing photos like Lightroom/ON1/...</description>
@@ -17,7 +17,7 @@
         <mainClass>org.photoslide.App</mainClass>
         <app.name>Photoslide</app.name>        
         <maven.build.timestamp.format>yy.ww.WWkkmm</maven.build.timestamp.format>
-        <app.version>1.5.0</app.version>        
+        <app.version>1.5.1</app.version>        
         <jvm.modules>java.base,jdk.management,java.naming,java.sql,java.transaction.xa,java.xml,jdk.unsupported,java.management,java.datatransfer,java.desktop,java.security.jgss,java.xml.crypto,jdk.javadoc,javafx.media,javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.swing,javafx.web,java.logging,jdk.charsets,java.se,java.net.http,java.prefs,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.localedata,java.compiler,jdk.net,java.instrument,java.scripting,java.rmi</jvm.modules>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>23</maven.compiler.source>
@@ -371,7 +371,7 @@
                         <configuration>
                             <mainClass>${mainClass}</mainClass>
                             <options>                                                                     
-                                <option>-XX:+UseZGC -XX:+ZGenerational</option>
+                                <option>-XX:+UseZGC</option>
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
@@ -397,7 +397,7 @@
                             <mainClass>${mainClass}</mainClass>
                             <options>                                     
                                 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>                                    
-                                <option>-XX:+UseZGC -XX:+ZGenerational</option>
+                                <option>-XX:+UseZGC</option>
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
@@ -423,7 +423,7 @@
                             <mainClass>${mainClass}</mainClass>
                             <options>                                     
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>                                    
-                                <option>-XX:+UseZGC -XX:+ZGenerational</option>
+                                <option>-XX:+UseZGC</option>
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
@@ -448,7 +448,7 @@
                         <configuration>
                             <mainClass>${mainClass}</mainClass>
                             <options>
-                                <option>-XX:+UseZGC -XX:+ZGenerational</option>
+                                <option>-XX:+UseZGC</option>
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
